--- a/GraviEngine/GraviEngine.vcproj
+++ b/GraviEngine/GraviEngine.vcproj
@@ -211,7 +211,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\Vector3D.h"
+				RelativePath="..\src\Vector3.h"
 				>
 			</File>
 			<File
