--- a/trunk/GraviEngine/GraviEngine.vcproj
+++ b/trunk/GraviEngine/GraviEngine.vcproj
@@ -199,11 +199,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\Entity.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\Game.h"
 				>
 			</File>
 			<File
+				RelativePath="..\src\Line.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\Mass.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\Math.h"
 				>
 			</File>
 			<File
