--- a/GraviEngine/GraviEngine.vcxproj
+++ b/GraviEngine/GraviEngine.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="..\src\Game.cpp" />
     <ClCompile Include="..\src\Input.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\Platform.cpp" />
     <ClCompile Include="..\src\RenderGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +113,7 @@
     <ClInclude Include="..\src\Math\Quaternion.h" />
     <ClInclude Include="..\src\Math\Vector3.h" />
     <ClInclude Include="..\src\Math\VectorField.h" />
+    <ClInclude Include="..\src\Platform.h" />
     <ClInclude Include="..\src\Render.h" />
     <ClInclude Include="..\src\RenderGL.h" />
   </ItemGroup>
