--- a/Solution/GraviEngine.vcxproj
+++ b/Solution/GraviEngine.vcxproj
@@ -96,12 +96,11 @@
     <ClCompile Include="..\src\Master.cpp" />
     <ClCompile Include="..\src\Math\Random.cpp" />
     <ClCompile Include="..\src\Math\Tensus.cpp" />
-    <ClCompile Include="..\src\Platform.cpp" />
     <ClCompile Include="..\src\RenderGL.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Camera.h" />
-    <ClInclude Include="..\src\Color.h" />
+    <ClInclude Include="..\src\Constans.h" />
     <ClInclude Include="..\src\Entities\BaseEntity.h" />
     <ClInclude Include="..\src\Entities\Box.h" />
     <ClInclude Include="..\src\Entities\Entity.h" />
@@ -115,8 +114,8 @@
     <ClInclude Include="..\src\Entities\WaveOut.h" />
     <ClInclude Include="..\src\Game.h" />
     <ClInclude Include="..\src\Input.h" />
-    <ClInclude Include="..\src\main.h" />
     <ClInclude Include="..\src\Master.h" />
+    <ClInclude Include="..\src\Math\Color.h" />
     <ClInclude Include="..\src\Math\Line.h" />
     <ClInclude Include="..\src\Math\Math.h" />
     <ClInclude Include="..\src\Math\Matrix3.h" />
@@ -127,7 +126,6 @@
     <ClInclude Include="..\src\Math\Tensus.h" />
     <ClInclude Include="..\src\Math\Vector3.h" />
     <ClInclude Include="..\src\Math\VectorField.h" />
-    <ClInclude Include="..\src\Platform.h" />
     <ClInclude Include="..\src\Render.h" />
     <ClInclude Include="..\src\RenderGL.h" />
   </ItemGroup>
