--- a/Skeleton/Skeleton_2012.vcxproj
+++ b/Skeleton/Skeleton_2012.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{A58BE0D3-8057-422C-857E-F89326631049}</ProjectGuid>
+    <ProjectGuid>{4FF1287F-C08F-4F86-AF62-C170DC239140}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Orbit</RootNamespace>
+    <RootNamespace>Skeleton</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -51,12 +51,11 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -67,35 +66,63 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Sources\Camera.cpp" />
-    <ClCompile Include="..\Sources\Core\Camera.cpp" />
     <ClCompile Include="..\Sources\Core\Input.cpp" />
     <ClCompile Include="..\Sources\Core\Master.cpp" />
     <ClCompile Include="..\Sources\Core\RenderGL.cpp" />
+    <ClCompile Include="..\Sources\Entities\Box.cpp" />
+    <ClCompile Include="..\Sources\Entities\Line.cpp" />
+    <ClCompile Include="..\Sources\Entities\Mass.cpp" />
+    <ClCompile Include="..\Sources\Entities\Sky.cpp" />
+    <ClCompile Include="..\Sources\Entities\Smoke.cpp" />
+    <ClCompile Include="..\Sources\Entities\Star.cpp" />
+    <ClCompile Include="..\Sources\Entities\Video.cpp" />
+    <ClCompile Include="..\Sources\Entities\Wave.cpp" />
+    <ClCompile Include="..\Sources\Entities\WaveOut.cpp" />
     <ClCompile Include="..\Sources\GameBase.cpp" />
+    <ClCompile Include="..\Sources\Math\Random.cpp" />
+    <ClCompile Include="..\Sources\Math\Tensus.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Orbit.cpp" />
+    <ClCompile Include="Skeleton.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Sources\Camera.h" />
-    <ClInclude Include="..\Sources\Constans.h" />
-    <ClInclude Include="..\Sources\Core\Camera.h" />
     <ClInclude Include="..\Sources\Core\Defines.h" />
     <ClInclude Include="..\Sources\Core\Input.h" />
     <ClInclude Include="..\Sources\Core\Master.h" />
     <ClInclude Include="..\Sources\Core\Render.h" />
     <ClInclude Include="..\Sources\Core\RenderGL.h" />
+    <ClInclude Include="..\Sources\Entities\BaseEntity.h" />
+    <ClInclude Include="..\Sources\Entities\Box.h" />
+    <ClInclude Include="..\Sources\Entities\Entity.h" />
+    <ClInclude Include="..\Sources\Entities\Line.h" />
+    <ClInclude Include="..\Sources\Entities\Mass.h" />
+    <ClInclude Include="..\Sources\Entities\Sky.h" />
+    <ClInclude Include="..\Sources\Entities\Smoke.h" />
+    <ClInclude Include="..\Sources\Entities\Star.h" />
+    <ClInclude Include="..\Sources\Entities\Video.h" />
+    <ClInclude Include="..\Sources\Entities\Wave.h" />
+    <ClInclude Include="..\Sources\Entities\WaveOut.h" />
     <ClInclude Include="..\Sources\GameBase.h" />
+    <ClInclude Include="..\Sources\Math\Color.h" />
+    <ClInclude Include="..\Sources\Math\Line.h" />
+    <ClInclude Include="..\Sources\Math\Math.h" />
+    <ClInclude Include="..\Sources\Math\Matrix3.h" />
+    <ClInclude Include="..\Sources\Math\Matrix4.h" />
+    <ClInclude Include="..\Sources\Math\Plane.h" />
+    <ClInclude Include="..\Sources\Math\Quaternion.h" />
+    <ClInclude Include="..\Sources\Math\Random.h" />
+    <ClInclude Include="..\Sources\Math\Tensus.h" />
+    <ClInclude Include="..\Sources\Math\Vector3.h" />
+    <ClInclude Include="..\Sources\Math\VectorField.h" />
     <ClInclude Include="Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
