--- a/GraviEngine/GraviEngine_2012.vcxproj
+++ b/GraviEngine/GraviEngine_2012.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Sources\Camera.cpp" />
+    <ClCompile Include="..\Sources\Core\Camera.cpp" />
     <ClCompile Include="..\Sources\Core\Input.cpp" />
     <ClCompile Include="..\Sources\Core\Master.cpp" />
     <ClCompile Include="..\Sources\Core\RenderGL.cpp" />
@@ -30,8 +30,8 @@
     <ClCompile Include="..\Sources\Math\Tensus.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Sources\Camera.h" />
     <ClInclude Include="..\Sources\Constans.h" />
+    <ClInclude Include="..\Sources\Core\Camera.h" />
     <ClInclude Include="..\Sources\Core\Defines.h" />
     <ClInclude Include="..\Sources\Core\Input.h" />
     <ClInclude Include="..\Sources\Core\Master.h" />
