--- a/GraviEngine/GraviEngine.vcxproj
+++ b/GraviEngine/GraviEngine.vcxproj
@@ -27,9 +27,11 @@
     <ClCompile Include="..\Sources\Entity\WaveOut.cpp" />
     <ClCompile Include="..\Sources\GameBase.cpp" />
     <ClCompile Include="..\Sources\main.cpp" />
+    <ClCompile Include="..\Sources\Math\Physics.cpp" />
     <ClCompile Include="..\Sources\Math\Random.cpp" />
     <ClCompile Include="..\Sources\Math\Tensus.cpp" />
     <ClCompile Include="..\Sources\Render\RenderGL.cpp" />
+    <ClCompile Include="..\Sources\SceneBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Sources\Constans.h" />
@@ -38,6 +40,7 @@
     <ClInclude Include="..\Sources\Core\FileStream.h" />
     <ClInclude Include="..\Sources\Core\Input.h" />
     <ClInclude Include="..\Sources\Core\Master.h" />
+    <ClInclude Include="..\Sources\Core\Node.h" />
     <ClInclude Include="..\Sources\Entity\BaseEntity.h" />
     <ClInclude Include="..\Sources\Entity\Box.h" />
     <ClInclude Include="..\Sources\Entity\Entity.h" />
@@ -56,6 +59,7 @@
     <ClInclude Include="..\Sources\Math\Math.h" />
     <ClInclude Include="..\Sources\Math\Matrix3.h" />
     <ClInclude Include="..\Sources\Math\Matrix4.h" />
+    <ClInclude Include="..\Sources\Math\Physics.h" />
     <ClInclude Include="..\Sources\Math\Plane.h" />
     <ClInclude Include="..\Sources\Math\Quaternion.h" />
     <ClInclude Include="..\Sources\Math\Random.h" />
@@ -64,6 +68,7 @@
     <ClInclude Include="..\Sources\Math\VectorField.h" />
     <ClInclude Include="..\Sources\Render\Render.h" />
     <ClInclude Include="..\Sources\Render\RenderGL.h" />
+    <ClInclude Include="..\Sources\SceneBase.h" />
     <ClInclude Include="..\Sources\Types.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -74,12 +79,12 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -97,9 +102,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>D:\Programming\Projects\GraviEngine\Sources;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>D:\Programming\Projects\GraviEngine\Sources;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
